crates/ink/tests/ui/storage_item/fail/collections_only_packed_1.stderr
error[E0277]: the trait bound `Vec<NonPacked>: parity_scale_codec::Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`
   |
   = help: the following implementations were found:
             <Vec<T> as parity_scale_codec::Decode>
   = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:11:8
   |
11 |     a: Vec<NonPacked>,
   |        ^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`
   |
   = help: the following implementations were found:
             <[T; N] as Encode>
             <[T] as Encode>
   = note: required because of the requirements on the impl of `Encode` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`

error[E0277]: the trait bound `Vec<NonPacked>: parity_scale_codec::Decode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
   |
9  | #[ink::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^ the trait `parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`
   |
   = help: the following implementations were found:
             <Vec<T> as parity_scale_codec::Decode>
   = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
   |
9  | #[ink::storage_item]
   | ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`
   |
   = help: the following implementations were found:
             <[T; N] as Encode>
             <[T] as Encode>
   = note: required because of the requirements on the impl of `Encode` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
   = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`
note: required because it appears within the type `Contract`
  --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
   |
10 | struct Contract {
   |        ^^^^^^^^
note: required by a bound in `Storable`
  --> $WORKSPACE/crates/storage/traits/src/storage.rs
   |
   | pub trait Storable: Sized {
   |                     ^^^^^ required by this bound in `Storable`
   = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<NonPacked>: parity_scale_codec::Decode` is not satisfied
   --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
    |
9   | #[ink::storage_item]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `parity_scale_codec::Decode` is not implemented for `Vec<NonPacked>`
    |
    = help: the following implementations were found:
              <Vec<T> as parity_scale_codec::Decode>
    = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
    = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
    = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`
note: required because it appears within the type `Contract`
   --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
    |
10  | struct Contract {
    |        ^^^^^^^^
note: required by a bound in `Result`
   --> $RUST/core/src/result.rs
    |
    | pub enum Result<T, E> {
    |                 ^ required by this bound in `Result`
    = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `[NonPacked]: Encode` is not satisfied
   --> tests/ui/storage_item/fail/collections_only_packed_1.rs:9:1
    |
9   | #[ink::storage_item]
    | ^^^^^^^^^^^^^^^^^^^^ the trait `Encode` is not implemented for `[NonPacked]`
    |
    = help: the following implementations were found:
              <[T; N] as Encode>
              <[T] as Encode>
    = note: required because of the requirements on the impl of `Encode` for `Vec<NonPacked>`
    = note: required because of the requirements on the impl of `Packed` for `Vec<NonPacked>`
    = note: required because of the requirements on the impl of `StorableHint<()>` for `Vec<NonPacked>`
    = note: required because of the requirements on the impl of `AutoStorableHint<ManualKey<2085512762_u32>>` for `Vec<NonPacked>`
note: required because it appears within the type `Contract`
   --> tests/ui/storage_item/fail/collections_only_packed_1.rs:10:8
    |
10  | struct Contract {
    |        ^^^^^^^^
note: required by a bound in `Result`
   --> $RUST/core/src/result.rs
    |
    | pub enum Result<T, E> {
    |                 ^ required by this bound in `Result`
    = note: this error originates in the derive macro `::ink::storage::traits::Storable` (in Nightly builds, run with -Z macro-backtrace for more info)
